                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-05-2006 fixed: Crash when reloading skins in certain situations.
 - 17-05-2006 fixed: [ 1489037 ] Changing skin breaks scan to db.
 - 17-05-2006 fixed: Startup window of "My Music" didn't work.
 - 17-05-2006 added: Separated "MyVideos" window (id 6) from "MyVideoFiles" window (now id 24).  Does not require any skin changes.
 - 17-05-2006 fixed: Transparency on embedded xbe thumbnails was replaced with black.
 - 17-05-2006 fixed: [ 1488834 ] German Umlaute won't display correct in My Programs folders
 - 17-05-2006 added: Advanced setting <thumbsize> to specify the size XBMC caches thumbs at.
 - 17-05-2006 fixed: [ 1488180 ] PNG transparency error.
 - 17-05-2006 fixed: [ 1488630 ] Partymode then enqueue causes internal playlist to be added
 - 17-05-2006 fixed: [ 1488829 ] Python ControlTextBox ignores multiple linebreaks
 - 16-05-2006 fixed: Cleaned up the thumb code (for <folder>.tbn)
 - 16-05-2006 fixed: LCD wasn't being reinitialized correctly on settings change.
 - 15-05-2006 fixed: volume control with remote now functions under Now Playing window.
 - 15-05-2006 fixed: forgot to make playlist paths
 - 14-05-2006 fixed: settings entry didn't show in file manager context menu.
 - 14-05-2006 added: you can now edit and remove customly added network locations in add source wizard.
 - 13-05-2006 changed: VoiceMasks.xml to System/ and KaiVectors.xml removed from CVS.
 - 13-05-2006 changed: don't show zoom overlay in slideshow when viewing comics.
 - 13-05-2006 fixed: [ 1483011 ] ControlListItem not able to display german umlaute